--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
                         <option value="3">Plan 3</option>
                         <option value="4">Plan 4</option>
                         <option value="5">Plan 5</option>
+                        <option value="6">Plan 6</option>
+                        <option value="7">Plan 7</option>
+                        <option value="8">Plan 8</option>
+                        <option value="9">Plan 9</option>
+                        <option value="10">Plan 10</option>
+                        
                     </select>
                 <div class="form-group">
     <label for="start-date">Fecha de Inicio:</label>
@@ -108,4 +114,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
